--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <img class="middle-img" src="top-down.jpg">
     </div>
     <div class="right-2">
-        <h2>We Started The Bottom In 1990</h2>
+        <h2>We Started From The Bottom In 1990</h2>
         <div class="paragraph">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Vel quibusdam architecto nobis assumenda ratione illum 
